--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,7 +8,22 @@
 }
 html {
     background-color: var(--bckrnd);
-    overflow: hidden;
+    overflow-x: hidden;
+}
+form {
+    width: 300px;
+}
+p {
+    font-size: 16px;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    width: 3px;
+    background-color: transparent
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: var(--brdr);
 }
 /* header */
 .navbg {
@@ -30,6 +45,8 @@ html {
 }
 /* footer */
 .footer {
+    padding-top: 40px;
+    padding-bottom: 8px;
     background-color: var(--bckrnd);
     background-image: linear-gradient(var(--bckrnd), #ff3c004f 99%);
 }
@@ -90,3 +107,10 @@ html {
 }
 
 /* change at 615px for mobile */
+
+@media screen and (max-width: 610px) {
+    .navbg {
+        flex-direction: column;
+    }
+
+}
